--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-status-bar": "~1.4.4",
     "formik": "^2.4.1",
     "jwt-decode": "^3.1.2",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
@@ -30,6 +31,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
     "styled-components": "^5.3.11",
+    "tailwindcss": "^3.3.2",
     "yup": "^1.2.0"
   },
   "devDependencies": {
