--- a/package.json
+++ b/package.json
@@ -31,11 +31,16 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
     "styled-components": "^5.3.11",
-    "tailwindcss": "^3.3.2",
     "yup": "^1.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@expo/webpack-config": "0.17.2",
+    "autoprefixer": "^10.4.8",
+    "babel-preset-expo": "^9.2.0",
+    "postcss": "^8.4.16",
+    "postcss-loader": "^4.2.0",
+    "tailwindcss": "^3.3.2"
   },
   "private": true
 }
