--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "nodemon app.js"
+        "start": "nodemon index.js"
     },
     "author": "",
     "license": "ISC",
@@ -17,6 +17,7 @@
         "jsonwebtoken": "^9.0.0",
         "mongoose": "^7.2.2",
         "morgan": "^1.10.0",
-        "nodemon": "^2.0.22"
+        "nodemon": "^2.0.22",
+        "pdf-to-printer": "^5.6.0"
     }
 }
