--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
     "styled-components": "^5.3.11",
-    "yup": "^1.2.0"
+    "yup": "^1.2.0",
+    "expo-updates": "~0.16.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
