--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "redux-thunk": "^2.4.2",
     "styled-components": "^5.3.11",
     "yup": "^1.2.0",
-    "expo-updates": "~0.16.4"
+    "expo-updates": "~0.16.4",
+    "expo-notifications": "~0.18.1",
+    "expo-device": "~5.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
