--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "yup": "^1.2.0",
     "expo-updates": "~0.16.4",
     "expo-notifications": "~0.18.1",
-    "expo-device": "~5.2.1"
+    "expo-device": "~5.2.1",
+    "expo-image-picker": "~14.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
