--- a/package.json
+++ b/package.json
@@ -16,26 +16,29 @@
     "@react-navigation/stack": "^6.3.16",
     "axios": "^1.4.0",
     "expo": "~48.0.18",
+    "expo-application": "~5.1.1",
+    "expo-device": "~5.2.1",
+    "expo-firebase-analytics": "^8.0.0",
+    "expo-firebase-app": "^2.0.0",
+    "expo-image-picker": "~14.1.1",
+    "expo-notifications": "~0.18.1",
     "expo-status-bar": "~1.4.4",
+    "expo-updates": "~0.16.4",
     "formik": "^2.4.1",
     "jwt-decode": "^3.1.2",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
-    "react-native-reanimated": "~2.14.4",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-reanimated": "~2.14.4",
     "react-native-toast-message": "^2.1.6",
     "react-native-web": "~0.18.10",
     "react-redux": "^8.0.7",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
     "styled-components": "^5.3.11",
-    "yup": "^1.2.0",
-    "expo-updates": "~0.16.4",
-    "expo-notifications": "~0.18.1",
-    "expo-device": "~5.2.1",
-    "expo-image-picker": "~14.1.1"
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
