--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@expo/webpack-config": "0.17.2",
+    "@expo/webpack-config": "^18.0.1",
     "autoprefixer": "^10.4.8",
     "babel-preset-expo": "^9.2.0",
     "postcss": "^8.4.16",
