--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
     "splash": {
       "image": "./src/assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#343434"
     },
     "assetBundlePatterns": ["**/*"],
     "ios": {
