--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-updates": "~0.16.4",
     "formik": "^2.4.1",
     "jwt-decode": "^3.1.2",
+    "metro-minify-terser": "^0.76.6",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
