--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.4.0",
     "expo": "~48.0.18",
     "expo-image-picker": "~14.1.1",
+    "expo-notifications": "~0.18.1",
     "expo-print": "^12.2.1",
     "expo-status-bar": "~1.4.4",
     "expo-updates": "~0.16.4",
@@ -29,6 +30,7 @@
     "react-native": "0.71.8",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-image-picker": "^5.4.2",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
@@ -38,8 +40,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
     "styled-components": "^5.3.11",
-    "yup": "^1.2.0",
-    "expo-notifications": "~0.18.1"
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
