--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
     "@expo/config-plugins": "^6.0.2",
@@ -45,11 +46,21 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@expo/webpack-config": "^18.0.1",
+    "@testing-library/react-native": "^12.1.2",
     "autoprefixer": "^10.4.8",
     "babel-preset-expo": "^9.2.0",
+    "jest": "^29.5.0",
     "postcss": "^8.4.16",
     "postcss-loader": "^4.2.0",
+    "react-test-renderer": "^18.2.0",
     "tailwindcss": "^3.3.2"
+  },
+  "jest": {
+    "preset": "react-native",
+    "transformIgnorePatterns": [
+      "node_modules/(?!(@react-native|react-native)/)",
+      "@expo/vector-icons"
+    ]
   },
   "overrides": {
     "@expo/config-plugins": "^6.0.2"
