--- a/app.json
+++ b/app.json
@@ -6,6 +6,7 @@
     "orientation": "default",
     "icon": "./src/assets/icon.png",
     "userInterfaceStyle": "light",
+    "jsEngine": "hermes",
     "splash": {
       "image": "./src/assets/splash.png",
       "resizeMode": "contain",
